replacing var with let

--- a/03-function-of-data/ex01.html
+++ b/03-function-of-data/ex01.html
@@ -19,7 +19,7 @@
         // They can accept one parameter (only the current data) or two (current data and its index)
 
 
-        var data = [1, 2, 3];
+        let data = [1, 2, 3];
 
         d3.select("body")
           .selectAll("p")
