--- a/05-animation/02-delay.html
+++ b/05-animation/02-delay.html
@@ -18,20 +18,20 @@
         // Next, we will animate the second bar the same way.
         // But we will apply a delay of 2000 milliseconds on the second bar so that it is animated 2000 milliseconds after the first bar.
 
-        var svg = d3.select("body")
+        let svg = d3.select("body")
             .append("svg")
             .attr("width", 500)
             .attr("height", 500);
 
 
-        var bar1 = svg.append("rect")
+        let bar1 = svg.append("rect")
             .attr("fill", "blue")
             .attr("x", 100)
             .attr("y", 20)
             .attr("height", 20)
             .attr("width", 10)
 
-        var bar2 = svg.append("rect")
+        let bar2 = svg.append("rect")
             .attr("fill", "blue")
             .attr("x", 120)
             .attr("y", 20)
