--- a/06-data-binding/01-data.html
+++ b/06-data-binding/01-data.html
@@ -17,9 +17,9 @@
         // You can pass two types of value to the data() function, an array of values (number or object) or a function of data.
 
 
-        var myData = ["Hello World!"];
+        let myData = ["Hello World!"];
 
-        var p = d3.select("body") // selects the HTML Body element.
+        let p = d3.select("body") // selects the HTML Body element.
 
                   .selectAll("p") // returns the paragraph element.
                                   // Since there is only one paragraph element, this will return a selection with one <p> element object.
