--- a/06-data-binding/03-limitations-of-data.html
+++ b/06-data-binding/03-limitations-of-data.html
@@ -9,14 +9,14 @@
     <p>D3 Tutorials </p>
 
     <script>
-        var myData = [1, 2, 3, 4, 5];
+        let myData = [1, 2, 3, 4, 5];
 
         // Since we only have one <p> element, only the first data element bound to the one available paragraph element.
         // But what happened to the rest of the data elements?
         // Rest of the data elements from the array were ignored because there were no other <p> elements.
         //
         // To handle such scenarios, where we are not aware of the number of data elements in our dataset and DOM elements, d3 provides the enter() function.
-        var p = d3.select("body")
+        let p = d3.select("body")
             .selectAll("p")
             .data(myData)
             .text((d, i) => d);
