--- a/06-data-binding/04-enter.html
+++ b/06-data-binding/04-enter.html
@@ -16,8 +16,8 @@
         // The output of enter() can be fed to append() method and append() will create DOM elements for which
         // there are no corresponding DOM elements on the page.
 
-        var data = [4, 1, 6, 2, 8, 9];
-        var body = d3.select("body") // selects the HTML Body.
+        let data = [4, 1, 6, 2, 8, 9];
+        let body = d3.select("body") // selects the HTML Body.
 
             .selectAll("span") // At this point, there are no span elements in the body. So this will return an empty array.
 
