--- a/06-data-binding/05-enter.html
+++ b/06-data-binding/05-enter.html
@@ -10,7 +10,7 @@
     <span></span>
 
     <script>
-        var data = [4, 1, 6, 2, 8, 9];
+        let data = [4, 1, 6, 2, 8, 9];
 
         d3.select("body") // selects the HTML Body.
           .selectAll("span") // selects the two <span> elements.
