--- a/06-data-binding/06-enter.html
+++ b/06-data-binding/06-enter.html
@@ -13,9 +13,9 @@
         // For each data element, the logic runs to determine whether the element is even or odd and
         // returns a color based on the result.
 
-        var data = [4, 1, 6, 2, 8, 9];
+        let data = [4, 1, 6, 2, 8, 9];
 
-        var body = d3.select("body")
+        let body = d3.select("body")
                      .selectAll("span")
                      .data(data)
                      .enter().append("span")
