--- a/05-animation/01-transition.html
+++ b/05-animation/01-transition.html
@@ -41,7 +41,7 @@
           .style("background-color", "red");
 
 
-        var t = d3.transition()
+        let t = d3.transition()
                   .duration(2000);
 
         d3.select("#container2")
